cmake_minimum_required(VERSION 3.10)
project(packet_worker VERSION 1.0.0 LANGUAGES C)
include_directories(include)
add_library(packet_worker SHARED capture.c  include/dart_api_dl.c packet_worker.def)
# add_executable(capture capture.c include/dart_api_dl.c)
target_link_libraries(packet_worker pcap)
# target_link_libraries(capture pcap)